[metadata]
name = proguard_rate
version = 0.0.3
author = weidongjian
author_email = weidongjian@gmail.com
description = 计算代码混淆率
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/weidongjian/proguardRate
project_urls =
    Bug Tracker = https://github.com/weidongjian/proguardRate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
entry_points={
          'console_scripts': [
              'calRate = proguard_rate.__main__:main',
          ],
      }


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

